Archive2/62/ffd83829b6817c/output
main.cpp:2:1: error: 'string' does not name a type
 string encrypt(string text) {
 ^
main.cpp:16:1: error: 'string' does not name a type
 string decrypt(string text)
 ^
